--- a/src/styles.css
+++ b/src/styles.css
@@ -158,7 +158,7 @@ code {
   --border: hsl(0 0% 14.9%);
   --input: hsl(0 0% 14.9%);
   --ring: hsl(0 0% 83.1%);
-  --chart-1: hsl(340, 74%, 35%);
+  --chart-1: hsla(338, 74%, 30%, 1);
   --chart-2: hsl(160 60% 45%);
   --chart-3: hsl(30 80% 55%);
   --chart-4: hsl(280 65% 60%);
