--- a/src/styles.css
+++ b/src/styles.css
@@ -116,9 +116,9 @@ code {
   --border: hsl(0 0% 89.8%);
   --input: hsl(0 0% 89.8%);
   --ring: hsla(338, 74%, 30%, 1);
-  --chart-1: hsl(12 76% 61%);
-  --chart-2: hsl(173 58% 39%);
-  --chart-3: hsl(197 37% 24%);
+  --chart-1: hsl(0, 100%, 50%);
+  --chart-2: hsla(338, 74%, 30%, 1);
+  --chart-3: hsl(330 100% 50%);
   --chart-4: hsl(43 74% 66%);
   --chart-5: hsl(27 87% 67%);
   --chart-6: hsl(262 83% 58%);
@@ -158,7 +158,7 @@ code {
   --border: hsl(0 0% 14.9%);
   --input: hsl(0 0% 14.9%);
   --ring: hsl(0 0% 83.1%);
-  --chart-1: hsla(338, 74%, 30%, 1);
+  --chart-1: hsl(0, 100%, 50%);
   --chart-2: hsl(160 60% 45%);
   --chart-3: hsl(30 80% 55%);
   --chart-4: hsl(280 65% 60%);
